[gd_scene load_steps=6 format=3 uid="uid://bmf5xebhmjeyv"]

[ext_resource type="Script" path="res://src/ui/menus/save_load_menu.gd" id="1_b4yfc"]
[ext_resource type="Theme" uid="uid://b5xvitnc8cji" path="res://assets/themes/base_menu_theme.tres" id="2_08emj"]
[ext_resource type="Texture2D" uid="uid://c4dl1grmfyx0a" path="res://assets/Images/button.png" id="3_dpk4f"]
[ext_resource type="Script" path="res://src/ui/components/standard_button.gd" id="4_godmm"]
[ext_resource type="Script" path="res://src/components/c_gui_scale.gd" id="5_vxdbw"]

[node name="SaveLoadMenu" type="CanvasLayer"]
process_mode = 3
layer = 5
script = ExtResource("1_b4yfc")
back_button_paths = Array[NodePath]([NodePath("MarginContainer/PanelContainer/VBoxContainer/BackButton")])

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0705882, 0.0705882, 0.0705882, 0.603922)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.5
offset_top = -187.5
offset_right = 244.5
offset_bottom = 187.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "SAVE / LOAD"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveSlot1Button" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save Game Slot 1"

[node name="SaveSlot2Button" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save Game Slot 2"

[node name="SaveSlot3Button" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save Game Slot 3"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="LoadSlot1Button" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Load  Game Slot 1"

[node name="LoadSlot2Button" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Load  Game Slot 2"

[node name="LoadSlot3Button" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Load  Game Slot 3"

[node name="BackButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
z_index = 7
y_sort_enabled = true
texture_filter = 3
custom_minimum_size = Vector2(385.74, 140)
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_08emj")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.807843, 0.423529, 0.156863, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 55
text = "Back"
icon = ExtResource("3_dpk4f")
flat = true
autowrap_mode = 2
icon_alignment = 1
expand_icon = true
script = ExtResource("4_godmm")
metadata/destination = ""
metadata/ReplacementMenu = ""

[node name="Node" type="Node" parent="MarginContainer/PanelContainer/VBoxContainer/BackButton"]
script = ExtResource("5_vxdbw")

[connection signal="mouse_entered" from="MarginContainer/PanelContainer/VBoxContainer/BackButton" to="MarginContainer/PanelContainer/VBoxContainer/BackButton" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/PanelContainer/VBoxContainer/BackButton" to="MarginContainer/PanelContainer/VBoxContainer/BackButton" method="_on_button_mouse_exited"]
